[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gaiges"
version = "1.0.0"
description = "Claude Code Performance Dashboard — Vintage Instrument Cluster"
authors = [
    {name = "RhetoricTech", email = "jamie@rhetorictech.ai"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Pillow>=9.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]

[project.scripts]
gaiges = "gaiges.__main__:main"

[project.urls]
Homepage = "https://github.com/rhetorictech/gaiges"
Repository = "https://github.com/rhetorictech/gaiges"

[tool.setuptools.package-data]
gaiges = ["assets/*.png", "assets/Additional Dashes/*"]
